fix: remove API_KEY from plan
(cherry picked from commit 50e276ab3ef14c3cd917fd24e7419dd24a015faa)